--- a/Views/Search/ListofIssues.cshtml
+++ b/Views/Search/ListofIssues.cshtml
@@ -74,7 +74,7 @@
                       //      url: 'IssueDetail/' + data["IssueID"],
                         
                             success: function () {
-                                document.location = '/Search/IssueDetail/' + data["IssueID"];
+                                document.location = '/Search/IssueDetails/' + data["IssueID"];
                             }
                   
                         });
