--- a/Views/Search/EditIssue.cshtml
+++ b/Views/Search/EditIssue.cshtml
@@ -9,7 +9,7 @@
 
 
 <div class="panel-body">
-    @using (Html.BeginForm("Edit", "Search"))
+    @using (Html.BeginForm("Edit", "Search", FormMethod.Post))
     {
         <div class="form-group">
             @Html.LabelFor(m => m.Issue.ProductId)
@@ -27,8 +27,13 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Issue.IssueHeader)
-            @Html.EditorFor(m => m.Issue.IssueHeader, new { @class = "form-control" })
+            @Html.EditorFor(m => m.Issue.IssueHeader, new {@class = "form-control"})
             @Html.ValidationMessageFor(m => m.Issue.IssueHeader)
+        </div>
+        <div class="form-group">
+            @Html.HiddenFor(m => m.Issue.IssueID)
+            @Html.HiddenFor(m => m.Issue.Username)
+
         </div>
 
         <div class="form-horizontal">
