validation and added strategyOne

--- a/Views/Search/AddSolution.cshtml
+++ b/Views/Search/AddSolution.cshtml
@@ -69,8 +69,8 @@
         </dd>
 
     </dl>
-
-    <p>
+    <tr></tr>
+    <dl>
 
 
         @if (Model.Solutions.Count > 0)
@@ -83,7 +83,7 @@
             }
         }
 
-    </p>
+    </dl>
 
 
 
@@ -152,7 +152,7 @@
                         success: function (url) {
                             $('#summernote').summernote('insertImage', url);
                         },
-                        error: function (jqXHR, textStatus, errorThrown) {
+                        error: function (jqXhR, textStatus, errorThrown) {
                             alert(textStatus + " " + errorThrown);
                         }
                     });
