--- a/Views/Search/IssueDetails.cshtml
+++ b/Views/Search/IssueDetails.cshtml
@@ -60,7 +60,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Issue.DateIssueCreation)
+            Issue was created on 
         </dt>
 
         <dd>
