--- a/Views/Search/NewIssue.cshtml
+++ b/Views/Search/NewIssue.cshtml
@@ -89,7 +89,7 @@
                 success: function (url) {
                     $('#summernote').summernote('insertImage', url);
                 },
-                error: function (jqXHR, textStatus, errorThrown) {
+                error: function (jqXhR, textStatus, errorThrown) {
                     alert(textStatus + " " + errorThrown);
                 }
             });
